change structure move Render under Scene

--- a/OpenGL_try1.vcxproj
+++ b/OpenGL_try1.vcxproj
@@ -71,11 +71,6 @@
     <ClCompile Include="src\mOGL\Math\Vector\Vector3.cpp" />
     <ClCompile Include="src\mOGL\mOGLApplication.cpp" />
     <ClCompile Include="src\mOGL\mOGLData.cpp" />
-    <ClCompile Include="src\mOGL\Render\RenderManager.cpp" />
-    <ClCompile Include="src\mOGL\Render\RenderTechnique\PhongShading.cpp" />
-    <ClCompile Include="src\mOGL\Render\RenderTechnique\PhotonMapping.cpp" />
-    <ClCompile Include="src\mOGL\Render\RenderTechnique\RayTracing.cpp" />
-    <ClCompile Include="src\mOGL\Render\RenderTechnique\RenderTechnique.cpp" />
     <ClCompile Include="src\mOGL\Scene\Camera\Camera.cpp" />
     <ClCompile Include="src\mOGL\Scene\Camera\CameraManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Light\Light.cpp" />
@@ -86,6 +81,11 @@
     <ClCompile Include="src\mOGL\Scene\Object\ObjectManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Object\Texture\Texture.cpp" />
     <ClCompile Include="src\mOGL\Scene\Object\Texture\TextureManager.cpp" />
+    <ClCompile Include="src\mOGL\Scene\Render\RenderManager.cpp" />
+    <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\PhongShading.cpp" />
+    <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\PhotonMapping.cpp" />
+    <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\RayTracing.cpp" />
+    <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\RenderTechnique.cpp" />
     <ClCompile Include="src\mOGL\Scene\Scene.cpp" />
     <ClCompile Include="src\mOGL\Scene\SceneManager.cpp" />
     <ClCompile Include="src\mOGL\String\String.cpp" />
@@ -97,12 +97,6 @@
     <ClInclude Include="src\mOGL\mOGL.h" />
     <ClInclude Include="src\mOGL\mOGLApplication.h" />
     <ClInclude Include="src\mOGL\mOGLData.h" />
-    <ClInclude Include="src\mOGL\Render\Render.h" />
-    <ClInclude Include="src\mOGL\Render\RenderManager.h" />
-    <ClInclude Include="src\mOGL\Render\RenderTechnique\PhongShading.h" />
-    <ClInclude Include="src\mOGL\Render\RenderTechnique\PhotonMapping.h" />
-    <ClInclude Include="src\mOGL\Render\RenderTechnique\RayTracing.h" />
-    <ClInclude Include="src\mOGL\Render\RenderTechnique\RenderTechnique.h" />
     <ClInclude Include="src\mOGL\Scene\Camera\Camera.h" />
     <ClInclude Include="src\mOGL\Scene\Camera\CameraManager.h" />
     <ClInclude Include="src\mOGL\Scene\Light\Light.h" />
@@ -113,6 +107,12 @@
     <ClInclude Include="src\mOGL\Scene\Object\ObjectManager.h" />
     <ClInclude Include="src\mOGL\Scene\Object\Texture\Texture.h" />
     <ClInclude Include="src\mOGL\Scene\Object\Texture\TextureManager.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\Render.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\RenderManager.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\RenderTechnique\PhongShading.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\RenderTechnique\PhotonMapping.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\RenderTechnique\RayTracing.h" />
+    <ClInclude Include="src\mOGL\Scene\Render\RenderTechnique\RenderTechnique.h" />
     <ClInclude Include="src\mOGL\Scene\Scene.h" />
     <ClInclude Include="src\mOGL\Scene\SceneManager.h" />
     <ClInclude Include="src\mOGL\ShaderLoader.h" />
