--- a/OpenGL_try1.vcxproj
+++ b/OpenGL_try1.vcxproj
@@ -70,17 +70,17 @@
     <ClCompile Include="src\mOGL\Math\Vector\Vector2.cpp" />
     <ClCompile Include="src\mOGL\Math\Vector\Vector3.cpp" />
     <ClCompile Include="src\mOGL\mOGLApplication.cpp" />
-    <ClCompile Include="src\mOGL\mOGLData.cpp" />
+    <ClCompile Include="src\mOGL\ResourceLoader\Mesh\mesh.cpp" />
+    <ClCompile Include="src\mOGL\ResourceLoader\Mesh\MeshManager.cpp" />
+    <ClCompile Include="src\mOGL\ResourceLoader\ResourceLoader.cpp" />
+    <ClCompile Include="src\mOGL\ResourceLoader\Texture\Texture.cpp" />
+    <ClCompile Include="src\mOGL\ResourceLoader\Texture\TextureManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Camera\Camera.cpp" />
     <ClCompile Include="src\mOGL\Scene\Camera\CameraManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Light\Light.cpp" />
     <ClCompile Include="src\mOGL\Scene\Light\LightManager.cpp" />
-    <ClCompile Include="src\mOGL\Scene\Object\Mesh\mesh.cpp" />
-    <ClCompile Include="src\mOGL\Scene\Object\Mesh\MeshManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Object\Object.cpp" />
     <ClCompile Include="src\mOGL\Scene\Object\ObjectManager.cpp" />
-    <ClCompile Include="src\mOGL\Scene\Object\Texture\Texture.cpp" />
-    <ClCompile Include="src\mOGL\Scene\Object\Texture\TextureManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Render\RenderManager.cpp" />
     <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\PhongShading.cpp" />
     <ClCompile Include="src\mOGL\Scene\Render\RenderTechnique\PhotonMapping.cpp" />
@@ -96,17 +96,17 @@
     <ClInclude Include="src\mOGL\Math\Vector\Vector3.h" />
     <ClInclude Include="src\mOGL\mOGL.h" />
     <ClInclude Include="src\mOGL\mOGLApplication.h" />
-    <ClInclude Include="src\mOGL\mOGLData.h" />
+    <ClInclude Include="src\mOGL\ResourceLoader\Mesh\mesh.h" />
+    <ClInclude Include="src\mOGL\ResourceLoader\Mesh\MeshManager.h" />
+    <ClInclude Include="src\mOGL\ResourceLoader\ResourceLoader.h" />
+    <ClInclude Include="src\mOGL\ResourceLoader\Texture\Texture.h" />
+    <ClInclude Include="src\mOGL\ResourceLoader\Texture\TextureManager.h" />
     <ClInclude Include="src\mOGL\Scene\Camera\Camera.h" />
     <ClInclude Include="src\mOGL\Scene\Camera\CameraManager.h" />
     <ClInclude Include="src\mOGL\Scene\Light\Light.h" />
     <ClInclude Include="src\mOGL\Scene\Light\LightManager.h" />
-    <ClInclude Include="src\mOGL\Scene\Object\Mesh\mesh.h" />
-    <ClInclude Include="src\mOGL\Scene\Object\Mesh\MeshManager.h" />
     <ClInclude Include="src\mOGL\Scene\Object\Object.h" />
     <ClInclude Include="src\mOGL\Scene\Object\ObjectManager.h" />
-    <ClInclude Include="src\mOGL\Scene\Object\Texture\Texture.h" />
-    <ClInclude Include="src\mOGL\Scene\Object\Texture\TextureManager.h" />
     <ClInclude Include="src\mOGL\Scene\Render\Render.h" />
     <ClInclude Include="src\mOGL\Scene\Render\RenderManager.h" />
     <ClInclude Include="src\mOGL\Scene\Render\RenderTechnique\PhongShading.h" />
